@@ -215,10 +215,9 @@ public class DoubleLocaleConverter extends DecimalLocaleConverter {
     protected Object parse(final Object value, final String pattern) throws ParseException {
         final Number result = (Number) super.parse(value, pattern);
         if (result instanceof Long) {
-            return new Double(result.doubleValue());
-        } else {
-            return (result);
+            return Double.valueOf(result.doubleValue());
         }
+        return result;
     }
 
 
